模块问题扫描与优化